--- a/cyclofit/pages/static/css/new_ride.css
+++ b/cyclofit/pages/static/css/new_ride.css
@@ -1,6 +1,7 @@
 .ride-page {
     z-index: 0;
     width: 100%;
+    margin-top: 3vh;
 }
 
 .message-box {
